<resources>
    <string name="app_name">SmartBicycle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">User@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">내 계정</string>
    <string name="menu_community">Community</string>
    <string name="menu_riding_record">주행기록</string>
    <string name="menu_recommend_path">추천경로</string>
    <string name="menu_find_Way">길찾기</string>
    <string name="menu_setting">설정</string>

    <string name="like"><u>Like</u></string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="post">Post</string>
    <string name="newfeed">New feed</string>
    <string name="name"><b>First name</b></string>
    <string name="sur_name"><b>Surname</b></string>
    <string name="dialog_text">"What's up?</string>

    <!-- 문재연 -->
    <string name="find_way_starting_point">출발지</string>
    <string name="find_way_destination">목적지</string>

    <string name="speed_meter_current_speed">0.00</string>
    <string name="speed_meter_time_str">시간</string>
    <string name="speed_meter_time_num">00:00:00</string>
    <string name="speed_meter_distance_str">거리</string>
    <string name="speed_meter_distance_num">0.00</string>
    <string name="speed_meter_avgSpeed_str">평균속도</string>
    <string name="speed_meter_avgSpeed_num">0.0</string>
    <string name="speed_meter_highestSpeed_str">최고속도</string>
    <string name="speed_meter_highestSpeed_num">0.0</string>
    <string name="speed_meter_calorie_str">칼로리</string>
    <string name="speed_meter_calorie_num">0</string>

    <string name="riding_record_item_riding_time_str">주행시간</string>
    <string name="riding_record_item_distance_str">이동거리</string>
    <string name="riding_record_item_average_speed_str">평균속도</string>
    <string name="riding_record_item_highest_str">최고속도</string>

    <!-- 문재연 -->

</resources>